[BE] refactor: 비회원 Anonymous 처리 추가, Kakao ErrorHandling 개선, OAuth 추상화 #338
* [BE] refactor: cors 제거 #338

* [BE] feat: 비회원 anonymous 처리 추가 #338

- WhiteList인데 Authenticate안 된 경우 UserContext guest로 할당

* [BE] refactor: member == null 제거, 비회원 체크 추가 #338

* [BE] refactor: OAuth Service Layer 추가 #338

* [BE] rename: UserContext 패키지 domain으로 이동 #338

* [BE] refactor: KaKao 관련 Class가 OAuth interface 구현하도록 변경 #338

* [BE] feat: KaKao ErrorHandler 및 timeout 핸들링 추가 #338

* [BE] rename: KaKao Error 관련 클래스 exception 패키지로 이동 #338

* [BE] refactor: userContext null check 추가 #338

* [BE] refactor: cursorRequest 추가 및 검증 #338

* [BE] feat: Member OAuthProvider Column 추가 #338

* [BE] refactor: GET만 허용하도록 API 화이트 리스트 수정 #338

* [BE] refactor: UserContext memberId null 막음 #338

* [BE] refactor: Kakao timeout int -> Duration으로 변경 #338

* [BE] refactor: OAuthError는 BADGATEWAY로 변경 #338

* [BE] rename: OAuthProvider domain으로 패키지 이동 #338

* [BE] style: .properties 파일 개행 추가 #338

* [BE] refactor: 메서드 분리 및 테스트 코드 가독성 개선 #338

* [BE] refactor: request validation 추가 #338

* [BE] test: test 제거 #338